@@ -28,14 +28,14 @@
 
 <!-- Start the Content -->
 <div id="content">
-	<% yield %>	
+	<% yield %>
 </div>
 
 <!-- Start the Footer -->
 <div id="footer">
   <p>
   Simple Console is under the <a
-    href="http://www.opensource.org/licenses/mit-license.php">MIT License</a>.
+    href="http://www.opensource.org/licenses/mit-license.php">MIT License</a> and was created by <a href="http://t0fuu.com">Hugh Bien</a>.
   </p>
 </div>
 
